<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@mipmap/ic_profile" />

    <EditText
        android:id="@+id/edFirstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_user"
        android:hint="Enter FirstName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edLastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_user"
        android:hint="Enter LastName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edBirthYear"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_age"
        android:hint="@string/enter_birthyear"
        android:inputType="date"
        android:maxLength="4"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Female" />

    </RadioGroup>

    <Button
        android:id="@+id/btnChangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_info" />

</LinearLayout>